# anime-label-studio

./: .gitignore  pyproject.toml
scripts/: batch_audio_subtitle_to_label_studio.py  batch_import_image_as_task.py  extract_audio.py  extract_subtitles.py  subtitle_to_label_studio.py
src/audio_label_studio/: app.py  config.py  model.py  ocr_predict.py
src/audio_label_studio/huoshan/: ocr.py
