[project]
name = "audio-label-studio"
version = "0.1.0"
description = ""
authors = [
    {name = "tolatolatop",email = "tolatolatop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "volcengine-python-sdk (>=2.0.2,<3.0.0)",
    "volcengine (>=1.0.184,<2.0.0)"
]

[tool.poetry]
packages = [{include = "audio_label_studio", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
